--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 .search-bar {
   text-align: center;
-  margin: 25px 10px 10px 10px;
+  margin: 60px 10px 10px 10px;
 }
 
 .search-bar input {
@@ -11,6 +11,11 @@
   border: 1px solid #ddd;
   padding: 10px;
   border-radius: 4px;
+  box-shadow: 4px 4px #eee;
+}
+
+.list-group-item {
+  box-shadow: 3px 3px 3px 3px #eee;
 }
 
 .list-group-item:hover {
